
Denora v1.5.0-git
-------------

Additions
13/11/15 From command line -v (alias of -version) and -? (alias of -help) been added
13/11/04 Full support for ircu and nefarious channel mode +A/U
13/11/04 ModuleCreateConfigDirective() cleaner way to pass to moduleGetConfigDirective()
13/10/23 Adds m4 directory, the configure files are getting nasty, time to move macros where
         they belong.
13/10/21 Added regex.h to the build, core and modules can now use this to pattern 
         match with regular expressions. 
13/01/13 Added support for ircu's channel mode +R (was missing)


Changes
13/11/20 base64_decode() removed last parameter of length, was never used.
13/11/18 Not finding mysql_config no longer causes configure to exit on an error, just throw a warning
13/11/15 Denora no longer says "Service not started" if the config file is missing, it gives a
         better error.
13/11/11 Moved do_umode() hack from 1.4.0 to the protocol like it should have been.
13/11/06 denora.sql no longer includes ison table data, all this is move to the ircd based
         sql files to remove extra columns that we will never set on that ircd.
13/11/03 ModData functions require you to call it with your modules name, since moddata structs
         were broken up until this point it shouldn't be a huge deal.
13/10/24 Removes some future features so 1.5 can roll
13/10/24 Removes Postgre from the code, was never used or really compiled for, maybe in the futre
13/10/22 Removed configure searches to embed perl in the code
13/10/17 Removed USE_RDB define from config, this was legacy Anope code for when rdb was an option.
13/05/31 Improved handling of KILL messages on InspIRCd
13/05/16 Do not free unallocated memory in InspIRCd protocol

Fixes
13/11/22 Denora links with hybrid using TS6 enabled.
13/11/22 Compiling with clang on bsd systems.
13/11/20 Fixed compiler warnings created by fixing stuff for macosx, so now it will build nicely on
         slackware.