@@ -76,7 +76,7 @@ Run_Config () {
 	fi
 
 	if [ "$DMEMORY" = "yes" ] ; then
-		WITH_MEMORYDEBUG=" --enable-dmalloc"
+		WITH_MEMORYDEBUG=" --enable-mtrace"
 	fi
 	if [ "$ENCRYPT" = "yes" ] ; then
 		WITH_ENCRYPT=" --enable-crypt"
@@ -428,34 +428,6 @@ while [ $ok -lt 1 ] ; do
 			;;
 		y*|Y*)
 			REGSCRIPT="yes"
-			ok=1
-			;;
-		*)
-			echo "Please enter 'yes' or 'no'."
-			;;
-	esac
-done
-echo ""
-
-####
-
-ok=0
-DEF=No
-echo "Allow Denora to attempt to build a dmalloc library and use dmalloc memory debugging tools."
-echo "Should only enable this if you are attempting to locate memory problems"
-while [ $ok -lt 1 ] ; do
-	echo "[$DMEMORY] "
-	if read INPUT ; then : ; else echo "" ; exit 1 ; fi
-	if [ ! "$INPUT" ] ; then
-		INPUT=$DMEMORY
-	fi
-	case $INPUT in
-		n*|N*)
-			DMEMORY="no"
-			ok=1
-			;;
-		y*|Y*)
-			DMEMORY="yes"
 			ok=1
 			;;
 		*)
