@@ -117,6 +117,8 @@ AC_CHECK_HEADER(malloc.h,AC_DEFINE(HAVE_MALLOC_H,1,""))
 AC_CHECK_HEADER(signal.h,AC_DEFINE(HAVE_SIGNAL_H,1,""))
 AC_CHECK_HEADER(poll.h,AC_DEFINE(HAVE_POLL_H,1,""))
 AC_CHECK_HEADER(regex.h,AC_DEFINE(HAVE_REGEX_H,1,""))
+AC_CHECK_HEADER(mcheck.h,AC_DEFINE(HAVE_MCHECK,1,""))
+
 
 AC_C_INLINE
 
@@ -185,29 +187,6 @@ if test "$ac_cv_pthread" = "yes"; then
  ])
 else
   DIS_THREADING="Threading: No"
-fi
-
-AC_ARG_ENABLE(dmalloc,
-    [  --enable-dmalloc        Enable support for the dmalloc debugging library],
-    [ac_cv_dmalloc="$enableval"],
-    [ac_cv_dmalloc="no"])
-
-if test "$ac_cv_dmalloc" = "yes"; then
-   AC_CHECK_HEADER(dmalloc.h,denora_dmalloch="yes", denora_dmalloch="no")
-
-   if test "$denora_dmalloch" = "yes"; then
-     	AC_CHECK_LIB(dmalloc, dmalloc_shutdown,denora_dmalloc="yes", denora_dmalloc="no")
-	   if test "$denora_dmalloc" = "yes"; then
-		   DIS_DMALLOC="Memory debugging: Yes"
-	   else
-		  DIS_DMALLOC="Memory debugging: No"
-   	fi
-   else
-		  DIS_DMALLOC="Memory debugging: No"
-   fi
-
-else
-  DIS_DMALLOC="Memory debugging: No"
 fi
 
 TYPE_SOCKLEN_T
@@ -867,7 +846,6 @@ cat <<EOT
       $DIS_MODULES
                 $DIS_MYSQL
 $DIS_MYSQLBT
-     $DIS_DMALLOC
     $DIS_ENCRYPT
             $DIS_THREADING
 
