@@ -38,9 +38,6 @@
 /* "" */
 #undef HAVE_CRYPT_H
 
-/* "" */
-#undef HAVE_DMALLOC
-
 /* Define to 1 if you have the `fork' function. */
 #undef HAVE_FORK
 
@@ -281,13 +278,6 @@
 
 /* "Use Mysql" */
 #undef USE_MYSQL
-
-/* "Use sqlite" */
-#undef HAVE_SQLITE3
-
-/* "Use LIBXML" */
-#undef USE_LIBXML
-
 
 /* "Backtrace mysql queries" */
 #undef USE_MYSQL_BT
