@@ -1,10 +1,0 @@
-EXPORTS
-mysql_Connect
-mysql_Error
-mysql_SelectDb
-mysql_Query
-mysql_NumRows
-mysql_NumFields
-mysql_LoadFromFile
-mysql_FetchRow
-mysql_FetchField
